--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -27,6 +27,10 @@ html, body, #app {
   padding: 12px 6px;
   font-weight: bold;
   font-size: 16px;
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
 }
 
 .loading-screen {
